--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -1,6 +1,7 @@
-.list{
-    // background-color: aqua;
-    .title{
-        color: red;
+.list {
+    display: flex;
+    width: 100%;
+    .listContainer {
+      flex: 6;
     }
-}
+  }
